--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prebuild": "expo prebuild --platform android --clean",
     "build:apk": "cd android && ./gradlew assembleRelease",
     "build:aab": "cd android && ./gradlew bundleRelease",
+    "build:android:debug": "bash scripts/build-and-install-android.sh",
     "typecheck": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -21,19 +22,22 @@
     "expo": "~54.0.33",
     "expo-build-properties": "^1.0.10",
     "expo-camera": "^17.0.10",
+    "expo-crypto": "^15.0.8",
     "expo-file-system": "^19.0.21",
     "expo-image-picker": "^17.0.10",
+    "expo-linking": "^8.0.11",
     "expo-media-library": "^18.2.1",
     "expo-print": "^15.0.8",
     "expo-router": "^6.0.23",
     "expo-sharing": "^14.0.8",
     "expo-status-bar": "~3.0.9",
-    "react": "19.2.4",
+    "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-gesture-handler": "^2.30.0",
-    "react-native-reanimated": "^4.2.2",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.23.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-worklets": "^0.7.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -43,12 +47,12 @@
     "@babel/preset-typescript": "^7.28.5",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.3.3",
-    "@types/jest": "^30.0.0",
-    "@types/react": "~19.2.0",
+    "@types/jest": "29.5.14",
+    "@types/react": "~19.1.10",
     "@types/react-test-renderer": "^19.1.0",
     "@types/uuid": "^9.0.0",
     "babel-preset-expo": "~54.0.10",
-    "jest": "^30.2.0",
+    "jest": "~29.7.0",
     "react-test-renderer": "^19.2.4",
     "ts-jest": "^29.4.6",
     "typescript": "~5.9.2"
