--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -118,3 +118,121 @@ jobs:
           DEBUG_APK_SIZE=$(du -h "$DEBUG_APK" | cut -f1)
           echo "| Release APK ($RELEASE_APK_SIZE) | \`$RELEASE_APK\` |" >> $GITHUB_STEP_SUMMARY
           echo "| Debug APK ($DEBUG_APK_SIZE) | \`$DEBUG_APK\` |" >> $GITHUB_STEP_SUMMARY
+
+  build-aab:
+    name: Build & Sign AAB (Play Store)
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+    timeout-minutes: 45
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
+
+      - name: Set up JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: ${{ env.JAVA_VERSION }}
+
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v3
+
+      - name: Install dependencies
+        run: npm ci --legacy-peer-deps
+
+      - name: Set Android versionCode (from GitHub run number)
+        run: |
+          node -e "const fs=require('fs');const p='app.json';const j=JSON.parse(fs.readFileSync(p));j.expo=j.expo||{};j.expo.android=j.expo.android||{};const v=parseInt(process.env.GITHUB_RUN_NUMBER||process.env.GITHUB_RUN_ID||'1',10)||1;j.expo.android.versionCode=v;fs.writeFileSync(p,JSON.stringify(j,null,2));console.log('Set app.json expo.android.versionCode=',v);"
+
+      - name: Generate native Android project
+        run: npx expo prebuild --platform android --clean
+
+      - name: Cache Gradle
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+            android/.gradle
+          key: gradle-${{ runner.os }}-${{ hashFiles('android/gradle/wrapper/gradle-wrapper.properties', 'android/build.gradle', 'android/app/build.gradle') }}
+          restore-keys: |
+            gradle-${{ runner.os }}-
+
+      - name: Build Release AAB
+        working-directory: android
+        run: ./gradlew bundleRelease --no-daemon --warning-mode=all
+
+      - name: Sign AAB
+        if: env.ANDROID_KEYSTORE_BASE64 != ''
+        env:
+          ANDROID_KEYSTORE_BASE64: ${{ secrets.ANDROID_KEYSTORE_BASE64 }}
+          ANDROID_KEYSTORE_PASSWORD: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
+          ANDROID_KEY_ALIAS: ${{ secrets.ANDROID_KEY_ALIAS }}
+          ANDROID_KEY_PASSWORD: ${{ secrets.ANDROID_KEY_PASSWORD }}
+        run: |
+          echo "$ANDROID_KEYSTORE_BASE64" | base64 --decode > android/app/release.keystore
+          # Ensure there are no pre-existing META-INF signatures which would
+          # create multiple certificate chains when we re-sign the AAB.
+          if command -v zip >/dev/null 2>&1; then
+            zip -q -d android/app/build/outputs/bundle/release/app-release.aab "META-INF/*.SF" "META-INF/*.RSA" "META-INF/*.DSA" || true
+          else
+            echo "zip not found; continuing without removing existing META-INF signature files"
+          fi
+
+          jarsigner -verbose \
+            -sigalg SHA256withRSA \
+            -digestalg SHA-256 \
+            -keystore android/app/release.keystore \
+            -storepass "$ANDROID_KEYSTORE_PASSWORD" \
+            -keypass "$ANDROID_KEY_PASSWORD" \
+            android/app/build/outputs/bundle/release/app-release.aab \
+            "$ANDROID_KEY_ALIAS"
+
+      - name: Verify AAB signature
+        if: env.ANDROID_KEYSTORE_BASE64 != ''
+        run: |
+          echo "Verifying AAB signature..."
+          jarsigner -verify android/app/build/outputs/bundle/release/app-release.aab
+          echo "AAB signature verification completed."
+
+      - name: Upload Release AAB artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: workshop-manager-aab
+          path: android/app/build/outputs/bundle/release/*.aab
+          retention-days: 30
+          if-no-files-found: error
+
+      - name: Upload to Google Play Store (Internal)
+        if: env.ANDROID_KEYSTORE_BASE64 != ''
+        uses: r0adkll/upload-google-play@v1
+        with:
+          serviceAccountJsonPlainText: ${{ secrets.GOOGLE_PLAY_SERVICE_ACCOUNT_JSON }}
+          packageName: com.tuinsomnia.workshopmanager
+          releaseFiles: android/app/build/outputs/bundle/release/app-release.aab
+          track: internal
+          status: completed
+          whatsNewDirectory: whatsNew
+
+      - name: Clean up workspace
+        if: always()
+        run: |
+          # Explicitly wipe the keystore before git clean (contains sensitive key material)
+          rm -f android/app/release.keystore
+
+          # Remove every untracked/generated file from the _work workspace
+          # (android/, node_modules/, .expo/, build outputs, etc.)
+          # Preserves .git/ so the next run does a fast fetch instead of a full clone
+          git clean -ffdx
+
+          # Remove Gradle build cache entries that grow unbounded between runs
+          rm -rf ~/.gradle/caches/build-cache-*
+          rm -rf ~/.gradle/caches/transforms-*
+          rm -rf ~/.gradle/caches/journal-*
